--- a/Styles.css
+++ b/Styles.css
@@ -11,6 +11,13 @@
 		margin-right: auto;
 			
 		}
+	
+
+main img {
+	display:block;
+	margin-left: auto;
+	margin-right: auto;
+}
 		header{
 		text-align: center;
 		background-image: url("images/space5.png");
@@ -42,7 +49,7 @@
 		main{
 		background-color:#DBD8F2;	
 		width: 100%;
-		height:1000px;
+
 /*		border-width:thin;
 		border-style: solid;
 		border-color: #5a5a5a;
@@ -80,6 +87,14 @@
 		text-align: center;
 		font-size: 40px;
 		}
+		h3{
+		text-align: center;
+		font-size: 30px;
+}
+	p{padding-left: 120px;
+		padding-right: 120px;
+	
+}
 		nav ul{list-style-type: none;
 		margin:0px;
 		padding:0px;
